refactor(timetable+business): readability pass (Codex)
Refactoring only, behavior verified unchanged by adversarial diff review:
- split large clone/validate methods into focused helpers
- folded skip-conditions via De Morgan (RoutingGraphService.canRouteSection)
- MINUTES_PER_DAY / speed constants, modeOrNone/offsetOrZero helpers
- explicit imports, transition-set + enum order preserved

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013nhXekZEqtSGqtgT4EyCLa